OSPO-METRICS/deployment/cloud/grafana/deployment-grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: #{service-name}#
    name: #{service-name}#-deployment
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{projectname}#
    app.bancolombia.com.co/pmo: #{pmo}#
  name: #{service-name}#
  namespace: #{namespace}#
spec:
  selector:
    matchLabels:
      app: #{service-name}#
  template:
    metadata:
      labels:
        app: #{service-name}#
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: #{service-name}#
          image: #{image_datasource_aws}#
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http-grafana
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 250m
              memory: 800Mi
            requests:
              cpu: 250m
              memory: 800Mi
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: #{service-name}#-pv
      volumes:
        - name: #{service-name}#-pv
          persistentVolumeClaim:
            claimName: #{service-name}#-claim
